# apiv3

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: branch.yml  codeql-analysis.yml  test.yml
api/: manage.py
api/api/: settings.py  urls.py
api/app/: celery.py  services.py  settings.py  urls.py
api/app/jinja2/: base.html
api/authentication/: admin.py  authentication.py  blacklist.py  constants.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
api/authentication/jinja2/: reset_password.html
api/authentication/migrations/: 0001_initial.py  0002_authtransaction_created_by.py  0002_auto_20210323_0946.py
api/common/: get_or_none.py  utils.py
api/common/mixins/: timestamp.py
api/common/sms/: __init__.py
api/common/sms/backends/: base.py  console.py
api/tests/test_auth/: test_available_email.py  test_available_phone.py  test_available_username.py  test_confirm_reset_password.py  test_login.py  test_logout.py  test_otp.py  test_register.py  test_reset_password.py  test_verify_otp.py
api/users/: admin.py  constants.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
api/users/migrations/: 0001_initial.py  0002_auto_20210224_1715.py
api/v2/: models.py  routers.py
api/v2/management/commands/: migrate_v2.py
scripts/: celery.sh
