[tool.poetry]
name = "say-apiv3"
version = "0.1.0"
description = ""
authors = ["Arash Fatahzade <fatahzade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
djangorestframework = "^3.12.2"
django-allauth = "^0.44.0"
django-rest-auth = "^0.9.5"
drf-spectacular = "^0.13.1"

[tool.poetry.dev-dependencies]
pudb = "^2020.1"
jedi = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
